<resources>
    <string name="app_name">YUMMY</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="YUMMY" />
    <string name="yummy">YUMMY</string>
    <string name="categorySearch">Search By category</string>
    <string name="countrySearch">Search BY Country</string>
    <string name="searchIngrediant" />
    <string name="searchIngrediants">Search By Ingrediant</string>
    <string name="random_inspiration">Random Inspirtion</string>
    <string name="category">More about food category</string>
    <string name="acordin_country">According to country</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="instruction" />
    <string name="instructions">Instruction</string>
    <string name="ingredients">Ingredients</string>
    <string name="video" />
    <string name="mealVideo">Explanatory video</string>
    <string name="navigation">Navigation_Plan</string>
    <string name="navigation_plan">paln</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plan">Plan</string>
    <string name="search_">Search</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuseday">Tuseday</string>
    <string name="wednsday">Wednsday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="filtercategory">Fiter by Category</string>
    <string name="filtercoubrty">Filter by Counrty</string>
    <string name="filteringreident">Filte by ingredient</string>
    <string name="topaln">Week Plan</string>
    <string name="tofav">Favourite\n</string>
    <string name="tofave">favourite</string>
</resources>