<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.yummy.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.yummy.ui.Srearch.SearchFragment"
        android:label="@string/search_"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.yummy.ui.Favourite.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite" />
    <fragment
        android:id="@+id/weekPlanFrag"
        android:name="com.example.yummy.ui.weekPlan.weekPlan"
        android:label="@string/plan"
        tools:layout="@layout/fragment_week_plan" />
</navigation>