<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <SearchView
        android:id="@+id/srchBar"
        android:layout_width="390dp"
        android:layout_height="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="11dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/categorySearch"
        android:textColor="#00BCD4"
        android:textColorLink="#7E3B3B"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/srchBar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/srchcCtegRcycView"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/countrySearch"
        android:textColor="#00BCD4"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/srchcCtegRcycView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/srchcCountyRcycView"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/searchIngrediants"
        android:textColor="#00BCD4"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/srchcCountyRcycView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/srchcInrdiRcycView"
        android:layout_width="409dp"
        android:layout_height="108dp"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>