<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".ui.Details.MealDetailsActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imgDetMeal"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        tools:srcCompat="@tools:sample/avatars" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtDetMealName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/akaya_kanadaka"
                android:gravity="center"
                android:text="TextView"
                android:textColorLink="#670B89"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="420dp"
                android:layout_height="41dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnAddToPlan"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#FFFFFF"
                    app:srcCompat="@drawable/baseline_calendar_month_24" />

                <ImageButton
                    android:id="@+id/btnAddtFav"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#FFFFFF"
                    app:srcCompat="@drawable/baseline_favorite_border_24" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtInstruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/akaya_kanadaka"
                android:gravity="center"
                android:text="@string/instructions"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextTextMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:textColor="#CFC1C1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/akaya_kanadaka"
                android:gravity="center"
                android:text="@string/ingredients"
                android:textSize="30sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycViewDetIngred"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/akaya_kanadaka"
                android:gravity="center"
                android:scrollbarSize="@android:dimen/dialog_min_width_major"
                android:text="@string/mealVideo"
                android:textSize="30sp" />

            <WebView
                android:id="@+id/webViewVideo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="0dp"
                android:visibility="visible" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>